# image-processing

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs  rgba.rs
src/processors/: ascii.rs  contrast.rs  convolution.rs  mod.rs  processor.rs
